[gd_scene load_steps=4 format=3 uid="uid://c3r8tqxe5wdh"]

[ext_resource type="Script" path="res://scripts/levels/rogue/forest/forest_level.gd" id="1_lgfd4"]
[ext_resource type="PackedScene" uid="uid://dxkgkv3r0fcw7" path="res://scenes/enemies/enemy.tscn" id="2_8p6vt"]
[ext_resource type="Script" path="res://scripts/manager/room_generator.gd" id="3_s6dld"]

[node name="ForestLevel" type="Node"]
script = ExtResource("1_lgfd4")
enemy_scene = ExtResource("2_8p6vt")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.211765, 0.0745098, 1)

[node name="SpawnPositions" type="Node2D" parent="."]

[node name="PlayerSpawnPoint" type="Marker2D" parent="SpawnPositions"]
position = Vector2(512, 300)

[node name="DroppedItemsContainer" type="Node2D" parent="."]

[node name="RoomGeneratorInstance" type="Node2D" parent="."]
script = ExtResource("3_s6dld")
